# dock

./: CLAUDE.md  CMakeLists.txt
qml/: DockItem.qml  main.qml
src/: activity.cpp  activity.h  applicationmodel.cpp  fakewindow.cpp  mainwindow.cpp  utils.cpp  xwindowinterface.cpp
translations/: ar_AA.ts  az_AZ.ts  be_BY.ts  be_Latn.ts  bg_BG.ts  bn_BD.ts  bs_BA.ts  cs_CZ.ts  da_DK.ts  de_DE.ts  en_US.ts  eo_XX.ts  es_ES.ts  es_MX.ts  fa_IR.ts  fi_FI.ts  fr_FR.ts  he_IL.ts  hi_IN.ts  hr_HR.ts  hu_HU.ts  id_ID.ts  ie.ts  it_IT.ts  ja_JP.ts  lt_LT.ts  lv_LV.ts  mg.ts  ml_IN.ts  nb_NO.ts  ne_NP.ts  nl_NL.ts  pl_PL.ts  pt_BR.ts  pt_PT.ts  ro_RO.ts  ru_RU.ts  si_LK.ts  sk_SK.ts  so.ts  (+10 more)
